# test-bare-metal-pico-rs-webserver

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
src/: main.rs
