[package]
name = "test-bare-metal-pico-rs-webserver"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m-rt = "0.7.5"
cyw43 = { version = "0.7.0", path = "../embassy/cyw43" }
cyw43-pio = { version = "0.10.0", path = "../embassy/cyw43-pio" }
embassy-executor = { version = "0.10.0", path = "../embassy/embassy-executor", features = ["platform-cortex-m", "executor-thread", "executor-interrupt"] }
embassy-net = { version = "0.9.0", path = "../embassy/embassy-net", features = ["tcp", "udp", "raw", "dhcpv4", "dns"] }
embassy-rp = { version = "0.10.0", path = "../embassy/embassy-rp", features = ["unstable-pac", "time-driver", "critical-section-impl", "rp235xa"] }
embassy-sync = { version = "0.8.0", path = "../embassy/embassy-sync" }
embassy-time = { version = "0.5.1", path = "../embassy/embassy-time" }
embedded-io-async = "0.7.0"
heapless = "0.9.2"
panic-halt = "1.0.0"
static_cell = "2.1.1"
